add api for umb menu
